src/JobPreview.css
.popup-container .job-preview {
	background-image: url("img/iphone-img.png");
    background-repeat: no-repeat;
    height: 350px;
    padding-top: 65px;
    background-position-x: center;
    background-size: 320px;
}
.job-preview .iphone-screen {
	width: 238px;
    margin-left: 191px;
    margin-top: 2px;
    height: 283px;
    cursor: default;
}
.clear {
    clear: both;
}
.job-preview .iphone-screen .left-iphone-screen,
.job-preview .iphone-screen .right-iphone-screen {
    overflow-y: auto;
    overflow-x: hidden;
    height: 283px;
}
.job-preview .iphone-screen .header-right {
	background-image: url("img/header-left.png");
	width: 238px;
	height: 37px;
	background-size: 238px;
	position: fixed;
    top: 0;
    z-index: 1;
}
.job-preview .iphone-screen .body-right {
	width: 100%;
    padding: 0 10px;
    margin: 0 auto;
}
.job-preview .iphone-screen .title-section {
    padding: 20px 0 15px 0;
    border-bottom: 1px solid rgba(0,0,0,0.1);
    text-align: left;
}
.job-preview .iphone-screen .title-section .job_preview-title {
    font-size: 14px;
    line-height: 1.5;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    word-wrap: break-word;
    color: #f2415f;
}
.job-preview .iphone-screen .title-section .job_preview-subtitle {
    font-size: 11px;
    line-height: 1.5;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #796a8f;
    margin-top: 3px;
}
.job-preview .iphone-screen .options-section {
	padding: 10px 0;
    min-height: 100px;
	border-bottom: 1px solid rgba(0,0,0,0.1);
    display: block;
}
.job-preview .iphone-screen .options-section-half {
    display: block;
    float: left;
    width: 50%;
}
.job-preview .iphone-screen .options-section ul {
    margin-top: 0 !important;
}
.job-preview .iphone-screen .options-section .ul-left {
    padding-right: 2px;
}
.job-preview .iphone-screen .options-section .ul-right {
    padding-left: 2px;
}
.job-preview .iphone-screen .options-section ul li {
    margin: 5px 0;
}
.job-preview .iphone-screen .options-section ul li .text {
    padding-left: 20px;
    text-align: left;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    font-size: 10px;
    line-height: 1.5;
    word-wrap: break-word;
    color: #796a8f;
}
.job-preview .iphone-screen .options-section ul li img {
    float: left;
}
.job-preview .iphone-screen .description-section {
    padding: 15px 0;
    border-bottom: 1px solid rgba(0,0,0,0.1);
    text-align: left;
}
.job-preview .iphone-screen .description-section .job_preview-subtitle {
    font-size: 12px;
    line-height: 1.5;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    color: #796a8f;
    margin-bottom: 3px;
}
.job-preview .iphone-screen .description-section .job_preview-description {
    font-size: 11px;
    line-height: 1.8;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #9f92b1;
}
.job-preview .iphone-screen .company-section {
	padding: 15px 0;
    text-align: left;
	border-bottom: 1px solid rgba(0,0,0,0.1);
}
.job-preview .iphone-screen .company-section .iphone-section-title,
.job-preview .iphone-screen .text-right .iphone-section-title {
    font-size: 11px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    color: #796a8f;
}
.job-preview .iphone-screen .company-section .description-location,
.job-preview .iphone-screen .text-right .description-location {
    font-size: 11px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #9f92b1;
}
.job-preview .iphone-screen .company-section .description-location span,
.job-preview .iphone-screen .text-right .description-location span,
.job-preview .iphone-screen .text-right .description-category {
    font-size: 11px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #9f92b1;
}
.job-preview .iphone-screen .company-section .description-location {
    float: left;
    width: 65%;
    text-align: left;
}
.job-preview .iphone-screen .company-section .description-date {
    font-size: 11px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    color: #9f92b1;
    width: 35%;
    float: right;
    text-align: right;
}
.job-preview .iphone-screen .description-links {
    margin-top: 10px;
}
.job-preview .iphone-screen .description-links .description-links-item {
    float: left;
    height: 30px;
    margin-right: 10px;
}
.job-preview .iphone-screen .description-links img {
    border-radius: 50%;
}
.job-preview .iphone-screen .image-slider {
    margin-top: 37px;
    height: 140px;
    width: 100%;
    background-color: rgba(0,0,0,0.05); 
}
.job-preview .iphone-screen .image-slider img {
    height: 140px!important;
    width: auto;
    margin: 0 auto;
}
.job-preview .iphone-screen .bottom-section {
	border: none;
    padding: 15px 0;
    text-align: center;
}
.job-preview .iphone-screen .bottom-section .iphone-title {
    font-size: 8px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    color: #796a8f;
}
.job-preview .iphone-screen .bottom-section img.job-provider {
    width: 15px;
    margin-top: 11px;
}
.job-preview .iphone-screen .section-button {
    width: 100%;
    height: 40px;
    text-align: center;
    color: #fff;
    background-color: #f2415f;
    border: none;
    outline: none;
    font-size: 12px;
    padding-top: 12px;
    font-weight: 400;
}
.job-preview .iphone-screen .description-section .image-left {
    float: left;
    height: 45px;
}
.job-preview .iphone-screen .description-section .text-right {
    margin-left: 60px;
}
.job-preview .iphone-screen .video .video--paused {
	width: 237px !important;
	height: 140px !important;
}
.job-preview .iphone-screen .video__el {
	width: 237px !important;
	height: 140px !important;
}
.job-preview .iphone-screen .header-left {
    background-image: url("img/header-right.png");
    width: 238px;
    height: 66px;
    background-size: 238px;
    position: fixed;
    top: 0;
    box-shadow: -5px 1.7px 10px 0 rgb( 49, 43, 58 );
    z-index: 1;
}
.job-preview .iphone-screen .body-left {
    width: 100%;
    padding-top: 66px;
    margin: 0 auto;
}
.job-preview .iphone-screen .body-left .box {
    padding: 20px 10px;
    font-size: 11px;
    line-height: 1.5;
    font-family: "Open Sans";
    color: #8c7da2;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}
.job-preview .iphone-screen .body-left .box .info {
    text-align: left;
    position: relative;
    margin-bottom: 13px;
}
.job-preview .iphone-screen .body-left .box .name {
    color: #f54b5d;
    font-size: 12px;
    font-weight: 600;
    width: 145px;
    margin-bottom: 3px;
    word-wrap: break-word;
}
.job-preview .iphone-screen .body-left .box .place {
    margin-top: 3px;
    padding-left: 15px;
    background-repeat: no-repeat;
    background-position: 0px 50%;
    background-image: url('img/place.png');
}
.job-preview .iphone-screen .body-left .box .avatar {
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
}
.job-preview .iphone-screen .body-left .box .avatar img {
    border-radius: 50%;
    width: 45px;
    height: 45px;
}
.job-preview .iphone-screen .body-left .image {
    background-size: cover;
    background-position: center;
    height: 120px;
    background-color: rgba(0,0,0,0.05);
    border-radius: 3px;
    width: 100%;
    position: relative;
}
.job-preview .iphone-screen .body-left .image .benefs {
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
    text-align: left;
    padding-right: 5px;
}
.job-preview .iphone-screen .body-left .image .benefs .ben {
    padding: 2px 10px 2px 20px;
    min-height: 14px;
    margin: 0 0 5px 5px;
    font-size: 10px;
    background-color: #08b698;
    color: white;
    background-repeat: no-repeat;
    background-position: 5px 49%;
    display: inline-block;
    border-radius: 200px;
    background-image: url('img/Benefit_white.png');
    background-size: 11px;
}

